<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:id="@+id/crdParent"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_black"
        android:padding="10dp">



        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/do_you_wants_to_delete_or_edit"
            android:textSize="18dp"
            android:textStyle="bold"
            android:padding="10sp"
            android:textColor="#4A4A4A"

            android:fontFamily="@font/titilliumweb"
            />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="10sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="#F44336"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>